fixed some layout issues

--- a/css/troika.css
+++ b/css/troika.css
@@ -173,7 +173,7 @@ header{
 }
 
 .item-sheet-tall-img{
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
 }
 
 .item-sheet-horizontal-grid-2col{
